# traco

./: index.html  package-lock.json  package.json
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/tracker/: mod.rs  tracker.rs
